项目初始化

--- a/sisyphus-common/sisyphus-common-swagger/pom.xml
+++ b/sisyphus-common/sisyphus-common-swagger/pom.xml
@@ -26,7 +26,7 @@
         <!-- SpringDoc webmvc -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
 
 	</dependencies>
